Fixed font weights, font sizes, and alignment for every page

--- a/main.css
+++ b/main.css
@@ -118,15 +118,17 @@ body {
   display: none;
 }
 
+/*  Add-to-cart animation  */
+
 .add-to-cart {
   margin-top: 30px;
   margin-bottom: 30px;
-  padding: 12px;
+  padding: 14px;
   width: 100%;
   background-color: #ffc107;
   border: none;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 0.85rem;
+  font-weight: 600;
   border-radius: 30px;
   color: black;
   cursor: pointer;
